# linkers-and-loaders

./: .gitignore  CMakeLists.txt
bootstrapper/: CMakeLists.txt
bootstrapper/src/: main.cpp
dyn-test-lib/: CMakeLists.txt
dyn-test-lib/src/: dynModule.cpp  dynModule.h
header-only-lib/: CMakeLists.txt
header-only-lib/include/dory/: genericService.h
static-shared-lib/: CMakeLists.txt
static-shared-lib/include/dory/: service.h
static-shared-lib/src/: service.cpp
test-lib/: CMakeLists.txt
test-lib/include/: macros.h
test-lib/src/: math.cpp
